html-demo-element in demo page css gap fix

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -14,9 +14,6 @@ script{ display:none !important; }
 dd{ padding: 1rem;}
 p{ margin: 0;}
 code{ font-weight: bold; color: green; text-wrap: nowrap; }
-*{
-    gap: 1rem;
-}
 
 html-demo-element h3
 {   text-shadow: 0 0 0.25em white;
